# guessing-game-with-robot

./: .gitignore  README.md  set.json
eval/: eval_set_3_objs.json  obj_list.json  obj_list_new.json
mujoco_simulation/: real_robot_safety.py  robot.py
notebooks/: perception.ipynb  practice2.ipynb  robot_test.ipynb  vlm_and_yollo_world.ipynb  vlm_and_yollo_world_internvl.ipynb  vlm_and_yolo_world_internvl.ipynb  vlm_and_yolo_world_qwenvl.ipynb
robot_control/Dynamixel/dynamixel_control/src/: test.cpp
robot_control/koch/: .setup_assistant  CMakeLists.txt  package.xml
robot_control/koch/config/: initial_positions.yaml  low_cost_robot.ros2_control.xacro  low_cost_robot.srdf  moveit_controllers.yaml
robot_control/ross/: 설치 및 실행.txt
robot_control/ross/Dynamixel/dynamixel_control/: CMakeLists.txt  package.xml
robot_control/ross/Dynamixel/dynamixel_control/src/: read_write_node.cpp
robot_control/ross/koch/config/: low_cost_robot.urdf.xacro  ros2_controllers.yaml
scripts/: calibration.py  control_real_robot.py  ik_with_safety.py  interface.py  perception_example.ipynb  pipeline.py  robot.py  vlm_and_yollo_world.ipynb  vlm_inference.ipynb  yollo_and_llm.ipynb  yollo_and_llm.py
ui/: README.md  requirements.txt  run.py  run_server.py  stt_and_tts.py
ui/app/: __init__.py  camera.py  control_robot_main.py  llm_service.py  object_processing.py  routes.py  routes2.py  test.ipynb  test.py
ui/app/robot_control/: callibration.py  constants.py  guesser.py  img2world.py  interface.py  main.py  robot.py
ui/app/static/: main.js
ui/app/templates/: camera_select.html  index.html
ui/app/utils/: inference_models.py  llm_and_vlm_inference_with_two_calls.py  load_models.py  proces_audio.py  process_audio.py  process_image.py  process_object.py  process_trans.py
utils/: text_and_audio.py  visualize.py
(+11 files in other folders)
