<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamixel_control</name>
  <version>0.0.0</version>
  <description>Subscribe '/joint_states' topic form moveit2 and control multiple dynamixel</description>
  <maintainer email="sjlee@todo.todo">sjlee</maintainer>
  <license>TODO: License declaration</license>

  <depend>moveit_ros_planning_interface</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>dynamixel_sdk</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
